Refactor HTTP handlers to improve error handling and response encoding